--- a/pages/movie/movie.wxss
+++ b/pages/movie/movie.wxss
@@ -1,8 +1,14 @@
 /** pages/movie/movie.wxss **/
 @import "/pages/movie/movie-grid/movie-grid-template.wxss";
 @import "/pages/movie/selected-grid/selected-grid-template.wxss";
+
 .movie-scroll, selected-scroll {
   width: 100%;
   white-space: nowrap;
 }
-
+.search-placeholder {
+  flex: 1;
+  font-size: 28rpx;
+  margin-left: 20rpx;
+  color: #9e9e9e;
+}
