--- a/pages/movie/movie-grid/movie-grid-template.wxml
+++ b/pages/movie/movie-grid/movie-grid-template.wxml
@@ -1,7 +1,7 @@
 
 <!--pages/movie/movie-grid/movie-grid-template.wxml-->
 <template name="movie-grid-template">
-  <view class="movie-wrapper">
+  <view class="movie-wrapper" bindtap="bindMovieDetail" data-movie-id="{{item}}">
     <view class="movie-content">
       <image class="poster" src="/images/default_poster.jpg"></image>
       <text class="name">熊出没：奇幻空间</text>
