--- a/pages/movie/movie-detail/movie-detail.wxss
+++ b/pages/movie/movie-detail/movie-detail.wxss
@@ -63,6 +63,7 @@
   border-radius: 6rpx;
   display: flex;
   flex-direction: column;
+  justify-content: center;
   text-align: center;
 }
 
@@ -73,4 +74,104 @@
 
 .movie-rating .ratings_count {
   font-size: 20rpx;
+}
+
+.wish-do-session {
+  display: flex;
+  align-self: center;
+  flex-direction: row;
+  padding-left: 30rpx;
+  padding-right: 30rpx;
+}
+
+.wish-do-session  .wish-btn {
+  font-size: 28rpx;
+  color: #de9703;
+  padding: 10rpx 70rpx 10rpx 70rpx;
+  margin-right: 80rpx;
+  text-align: center;
+  border-radius: 6rpx;
+  border: 1px solid #de9703;
+  box-sizing: border-box;
+}
+
+.wish-do-session .do-btn {
+  font-size: 28rpx;
+  color: #de9703;
+  padding: 10rpx 70rpx 10rpx 70rpx;
+  margin-left: 80rpx;
+  text-align: center;
+  border-radius: 6rpx;
+  border: 1px solid #de9703;
+  box-sizing: border-box;
+}
+
+.desc-session, .directors-casts-session {
+  display: flex;
+  flex-direction: column;
+  padding: 0rpx 30rpx 0rpx 30rpx;
+  margin: 20rpx 0rpx 20rpx 0rpx;
+}
+
+.desc-session .title, .directors-casts-session .title {
+  color: #9e9e9e;
+  font-size: 24rpx;
+  line-height: 42rpx;
+}
+
+.desc-session .desc-wrapper {
+}
+
+.desc-session .desc-content {
+  font-size: 24rpx;
+  line-height: 38rpx;
+  text-indent: 2em;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  color: #4a4a4a;
+}
+
+.desc-session .extension {
+  background: #fff;
+  height: 38rpx;
+  font-size: 24rpx;
+  line-height: 38rpx;
+  color: #32cd32;
+}
+
+.directors-casts-scroll {
+  width: 100%;
+  white-space: nowrap;
+}
+
+.directors-casts-wrapper {
+  display: inline-block;
+}
+
+.directors-casts-content {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+}
+
+.directors-casts-wrapper .image {
+  width: 140rpx;
+  height: 200rpx;
+  margin-left: 8rpx;
+  margin-right: 8rpx;
+}
+
+.directors-casts-wrapper .image:first-child {
+  margin-left: 0rpx;
+}
+
+.directors-casts-wrapper .image:last-child {
+  margin-right: 0rpx;
+}
+
+.directors-casts-wrapper .name {
+  width: 140rpx;
+  line-height: 1.6;
+  color: #4a4a4a;
+  font-size: 24rpx;
 }
