--- a/pages/movie/selected-grid/selected-grid-template.wxml
+++ b/pages/movie/selected-grid/selected-grid-template.wxml
@@ -1,10 +1,10 @@
 
 <!--pages/movie/selected-grid/selected-grid-template.wxml-->
 <template name="selected-grid-template">
-  <view class="selected-wrapper" bindtap="bindSelected" data-selected-title="{{selected.categoryTitle}}">
+  <view class="selected-wrapper" bindtap="bindSelected" data-type-id="{{selected.categoryType}}" data-type-title="{{selected.categoryTitle}}">
     <view class="selected-content">
       <text class="name">{{selected.categoryTitle}}</text>
-      <text class="desc">8分以上好电影</text>
+      <text class="desc">{{selected.desc}}</text>
       <view class="selected-poster">
         <image class="selected-poster-left" src="{{selected.movies[1].images.small}}"></image>
         <image class="selected-poster-center" src="{{selected.movies[0].images.small}}"></image>
