--- a/pages/movie/selected/selected.wxml
+++ b/pages/movie/selected/selected.wxml
@@ -2,17 +2,17 @@
 <!--pages/movie/selected/selected.wxml-->
 <view class="container">
   <view class="session-selected">
-    <block wx:for="{{[1,2, 3, 4, 5,6,7,8,9,10]}}" wx:for-index="index">
+    <block wx:for="{{movies}}" wx:for-index="index" wx:for-item="item">
       <view class="selected-wrapper" bindtap="bindMovieDetail" data-movie-id="{{index}}">
         <view class="selected-header selected-header-spacing">
           <text class="selected-index">{{index + 1}}</text>
         </view>
         <view class="selected-movie-content selected-movie-content">
-          <image class="poster" src="/images/default_poster.jpg"></image>
+          <image class="poster" src="{{item.images.medium}}"></image>
           <view class="movie-summary">
-            <text class="name">熊出没：奇幻空间</text>
+            <text class="name">{{item.title}}</text>
             <text class="rating">5颗星</text>
-            <text class="desc">熊出没：奇幻空间熊出没：奇幻空间熊出没：奇幻空间熊出没：奇幻空间熊出没：奇幻空间熊出没：奇幻空间：奇幻空间熊出没：奇幻空间熊出没：奇幻空间熊出没：奇幻空间</text>
+            <text class="desc">故事聚焦在由范·迪塞尔带头的的特工小队和以甄子丹为首的反派组织之间的对决。在这部作品中，迪塞尔饰演的特工凯奇不再是孤胆英雄，他将与一群出色的伙伴共同作战...</text>
           </view>
         </view>
       </view>
