--- a/pages/movie/movie-detail/movie-detail.wxss
+++ b/pages/movie/movie-detail/movie-detail.wxss
@@ -50,7 +50,7 @@
   overflow: hidden;
 }
 
-.movie-summary .subtype, .origin-name, .year, .time {
+.movie-summary .subtype, .origin-name, .countries {
   font-size: 24rpx;
   color: #9e9e9e;
 }
@@ -157,8 +157,8 @@
 .directors-casts-wrapper .image {
   width: 140rpx;
   height: 200rpx;
-  margin-left: 8rpx;
-  margin-right: 8rpx;
+  margin-left: 12rpx;
+  margin-right: 12rpx;
 }
 
 .directors-casts-wrapper .image:first-child {
@@ -171,7 +171,10 @@
 
 .directors-casts-wrapper .name {
   width: 140rpx;
-  line-height: 1.6;
   color: #4a4a4a;
-  font-size: 24rpx;
+  font-size: 22rpx;
+  word-break: keep-all;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
