--- a/pages/movie/movie-grid/movie-grid-template.wxss
+++ b/pages/movie/movie-grid/movie-grid-template.wxss
@@ -9,6 +9,7 @@
 .movie-content {
   display: flex;
   flex-direction: column;
+  align-items: center;
 }
 
 .movie-wrapper:first-child {
@@ -29,6 +30,7 @@
   color: #4a4a4a;
   font-size: 28rpx;
   font-weight: 600;
+  text-align: center;
   line-height: 1.6;
   word-break: keep-all;
   white-space: nowrap;
