--- a/pages/movie/movie-list/movie-list-template.wxss
+++ b/pages/movie/movie-list/movie-list-template.wxss
@@ -50,10 +50,10 @@
   overflow: hidden;
 }
 
-.movie-content .directors, .casts, .wish-count {
-  font-size: 26rpx;
+.movie-content .directors, .casts, .genres, .wish-count {
+  font-size: 24rpx;
   color: #9e9e9e;
-  font-weight: 600;
+  font-weight: 500;
   line-height: 1.6;
   word-break: keep-all;
   white-space: nowrap;
