--- a/pages/movie/selected/selected.wxss
+++ b/pages/movie/selected/selected.wxss
@@ -1,4 +1,5 @@
 /* pages/movie/selected/selected.wxss */
+@import "/pages/movie/movie-rating/movie-rating-template.wxss";
 
 .session-selected {
   background: #fff;
@@ -90,13 +91,6 @@
   white-space: nowrap;
   text-overflow: ellipsis;
   overflow: hidden;
-}
-
-.selected-movie-content .rating {
-  color: #9e9e9e;
-  font-size: 28rpx;
-  font-weight: 500;
-  margin: 15rpx 0rpx 15rpx 0rpx;
 }
 
 .selected-movie-content .desc {
